Technical-Docs-Page/index.css
:root {
    --left-color: rgb(25, 40, 58);
    --right-color: rgb(78, 106, 135);
    --background: white;
    --nav-background: var(--background, white);
}

html {
    scroll-behavior: smooth !important;
}

body {
    margin: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    height:  calc(100vh);;
    color: var(--left-color, rgb(25, 40, 58));
    background-color: var(--background, white, white);
}

.flex-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-header {
    height: 10vh;
    background: linear-gradient(90deg, var(--left-color, rgb(25, 40, 58)), var(--right-color, rgb(78, 106, 135)));
    color: var(--left-color, rgb(25, 40, 58));
    border-bottom-right-radius: 3vh;
}

.nav-header img {
    height: 80%;
}

.nav-items {
    height: 85vh;
    width: 25vw;
    max-width: 200px;
    font-size: 18px;
    font-weight: 500;
    padding: 2vmin;
    overflow: auto;
}

.nav-link-container {
    width: 100%;
    border-radius: 1vmin;
    background-color: var(--background, white);
    transition-timing-function: ease-in;
    transition-duration: 0.2s;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}

.nav-link-container:hover {
    background-color: #e0e0e0;
}

.nav-items a {
    color: var(--right-color, rgb(78, 106, 135));
    text-decoration: none;
}

.nav-link {
    height: 100%;
    width: 100%;
    padding: 2vmin 0 ;
}

.header-bar {
    height: 10vh;
    color: var(--right-color, rgb(78, 106, 135));
}

main {
    width: 70vw;
    margin: 0 5vw;
    overflow: auto;
    color: var(--left-color, rgb(25, 40, 58));
}

.mark-img {
    width: 100%;
}

.none {
    display: none;
}

@media screen and (max-width: 700px) {
    main {
        padding-top: 13vh;
    }

    nav {
        user-select: none;
        position: fixed;
        background-color: var(--background, white);
        z-index: 999;
        transition-delay: 0.1s;
        transition-duration: 0.2s;
        transition-timing-function: ease-in;
        transform: translateX(-30vw);

    }

    .nav-link {
        font-size: 4vmin;
        padding: 1.5vmin 0 ;
    }

    .nav-back {
        background: var(--left-color, rgb(25, 40, 58));
    }

    .nav-tag {
        transform: translateX(18vw);
    }

    .nav-img {
        transform: translateX(-5vw);
    }

    nav:hover {
        transform: translateX(0);
        width: 45vw;
    }

    .nav-items {
        background-color: var(--background, white);
    }

    main {
        width: 90vw;
    }
}

